Closed Bug 1618493 Opened 5 years ago Closed 5 years ago

[Wayland] PIP window can't be downsized with WebRender/GL compositor

Categories

(Core :: Widget: Gtk, defect, P3)

defect

Tracking

()

RESOLVED FIXED
mozilla75
Tracking Status
firefox-esr68 --- unaffected
firefox73 --- wontfix
firefox74 --- wontfix
firefox75 --- fixed

People

(Reporter: stransky, Assigned: stransky)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

PIP window can't be downsized with WebRender/GL compositor, there are gfx artifacts there.

Recently opaque region is set when wl_surface is obtained by renderer/compositor.
It does not work as GL/WebRender get wl_surface only once and creates egl_window
on top of it so the opaque region is never updated.

Pushed by nbeleuzu@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/31cf4e642b90 [Wayland] Set opaque region for accelerated window immediately, r=jhorak"
Flags: needinfo?(stransky)
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla75

Comment on attachment 9129485 [details]
Bug 1618493 [Wayland] Set opaque region for accelerated window immediately, r?jhorak"

Beta/Release Uplift Approval Request

  • User impact if declined: Firefox window / PIP window can't be downsized when WebRender/GL compositor is used.
  • Is this code covered by automated tests?: No
  • Has the fix been verified in Nightly?: No
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): Wayland/Linux only.
  • String changes made/needed: none
Flags: needinfo?(stransky)
Attachment #9129485 - Flags: approval-mozilla-beta?

webrender and gl compositor are both disabled by default, right?

Flags: needinfo?(stransky)

(In reply to Julien Cristau [:jcristau] from comment #5)

webrender and gl compositor are both disabled by default, right?

Yes, both disabled by default.

Flags: needinfo?(stransky)

Comment on attachment 9129485 [details]
Bug 1618493 [Wayland] Set opaque region for accelerated window immediately, r?jhorak"

P3, we shipped out last beta and Wayland + gl compositor + webrender is too much of an edge case for an uplift before RC. I think this patch can ride the 75 train and benefit from more baking on pre-release channels.

Attachment #9129485 - Flags: approval-mozilla-beta? → approval-mozilla-beta-
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: