Bug 1618493 [Wayland] Set opaque region for accelerated window immediately, r=jhorak"

Recently opaque region is set when wl_surface is obtained by renderer/compositor.
It does not work as GL/WebRender get wl_surface only once and creates egl_window
on top of it so the opaque region is never updated.

Differential Revision: https://phabricator.services.mozilla.com/D64583