widget/gtk/mozcontainer.h
@@ -86,6 +86,7 @@ struct _MozContainer {
   gboolean surface_needs_clear;
   gboolean ready_to_draw;
   std::vector<std::function<void(void)>> initial_draw_cbs;
+  gboolean is_accelerated;
 #endif
   gboolean force_default_visual;
 };
@@ -118,6 +119,7 @@ void moz_container_add_initial_draw_callback(
 wl_surface* moz_gtk_widget_get_wl_surface(GtkWidget* aWidget);
 void moz_container_update_opaque_region(MozContainer* container,
                                         bool aSubtractCorners);
+void moz_container_set_accelerated(MozContainer* container);
 #endif
 
 #endif /* __MOZ_CONTAINER_H__ */
